--- a/index.html
+++ b/index.html
@@ -146,102 +146,113 @@
 <div id="table-container" class="table-container"></div>
 
 <script>
-  // ✅ إنشاء عميل Supabase بشكل صحيح (إصلاح الخطأ الدائري)
-  let supabase;  // إعلان مسبق لتجنب ReferenceError
+  // متغيرات Supabase
+  let supabaseClient = null;
+  const supabaseUrl = 'https://uemmbigftrrsejzucgxo.supabase.co';
+  const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVlbW1iaWdmdHJyc2VqenVjZ3hvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg3OTE5NTksImV4cCI6MjA3NDM2Nzk1OX0.ku6ibVn84Pw1a-_2sWTRia3fynuxE7Axi3qXip6oI8k';
 
-  // الانتظار حتى تحميل المكتبة العالمية
-  function initSupabase() {
-    if (typeof window !== 'undefined' && window.supabase && window.supabase.createClient) {
-      const { createClient } = window.supabase;
-      const supabaseUrl = 'https://uemmbigftrrsejzucgxo.supabase.co';
-      const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVlbW1iaWdmdHJyc2VqenVjZ3hvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg3OTE5NTksImV4cCI6MjA3NDM2Nzk1OX0.ku6ibVn84Pw1a-_2sWTRia3fynuxE7Axi3qXip6oI8k';
-      supabase = createClient(supabaseUrl, supabaseKey);
-      console.log('✅ Supabase مُنشأ بنجاح!');
-      return true;
-    } else {
-      console.error('❌ مكتبة Supabase لم تُحمّل بعد. انتظر ثانية...');
-      return false;
-    }
-  }
+  // دالة للانتظار حتى تحميل المكتبة العالمية وإنشاء العميل
+  function initializeSupabase() {
+    return new Promise((resolve, reject) => {
+      let attempts = 0;
+      const maxAttempts = 50;  // 5 ثوانٍ كحد أقصى (100ms * 50)
 
-  // إنشاء العميل عند تحميل الصفحة
-  if (document.readyState === 'loading') {
-    document.addEventListener('DOMContentLoaded', () => {
-      if (!initSupabase()) {
-        // إعادة المحاولة بعد 500ms إذا لم تُحمّل
-        setTimeout(initSupabase, 500);
-      }
-    });
-  } else {
-    initSupabase();
-  }
-
-  // الانتظار حتى إنشاء supabase قبل استخدام الدوال
-  function waitForSupabase(callback) {
-    if (supabase) {
-      callback();
-    } else {
-      setTimeout(() => waitForSupabase(callback), 100);
-    }
-  }
-
-  // اختبار الاتصال (يُشغّل بعد إنشاء supabase)
-  async function testSupabaseConnection() {
-    waitForSupabase(async () => {
-      console.log('🔍 بدء اختبار الاتصال بـ Supabase...');
-      try {
-        // اختبار 1: الاتصال الأساسي
-        const { data: pingData, error: pingError } = await supabase
-          .from('pg_catalog')
-          .select('version()')
-          .limit(1);
-        if (pingError) throw new Error('فشل الاتصال الأساسي: ' + pingError.message);
-
-        console.log('✅ الاتصال الأساسي ناجح!');
-
-        // اختبار 2: هل الجدول موجود؟
-        const { count: tableCount, error: tableError } = await supabase
-          .from('publishing_schedule')
-          .select('*', { count: 'exact', head: true });
-
-        if (tableError && tableError.code === '42P01') {
-          console.error('❌ الجدول غير موجود! أنشئه في Supabase (SQL Editor).');
-          alert('❌ الجدول "publishing_schedule" غير موجود!\n\nاذهب إلى Supabase > SQL Editor ونفذ:\nCREATE TABLE IF NOT EXISTS publishing_schedule (id UUID DEFAULT gen_random_uuid() PRIMARY KEY, type TEXT NOT NULL, row_index INTEGER NOT NULL, column_index INTEGER NOT NULL, value TEXT, checked BOOLEAN);');
-          return;
-        } else if (tableError) {
-          throw new Error('خطأ في الوصول إلى الجدول: ' + tableError.message);
-        }
-
-        console.log('✅ الجدول موجود! عدد السجلات:', tableCount || 0);
-
-        // اختبار 3: إدراج تجريبي بسيط
-        const { error: insertTestError } = await supabase
-          .from('publishing_schedule')
-          .insert([{ type: 'test', row_index: 0, column_index: 0, value: 'test_value' }]);
-
-        if (insertTestError) {
-          console.error('❌ خطأ في الإدراج التجريبي:', insertTestError);
-          if (insertTestError.message.includes('permission')) {
-            alert('❌ مشكلة صلاحيات! تعطيل RLS أو أضف Policies في Supabase (Table Editor > publishing_schedule > Policies).');
-          } else {
-            alert('❌ خطأ في الحفظ التجريبي: ' + insertTestError.message + '\n\nتحقق من Console.');
+      const interval = setInterval(() => {
+        attempts++;
+        if (window.supabase && typeof window.supabase.createClient === 'function') {
+          clearInterval(interval);
+          try {
+            const { createClient } = window.supabase;
+            supabaseClient = createClient(supabaseUrl, supabaseKey);
+            console.log('✅ Supabase مُنشأ بنجاح!');
+            resolve(supabaseClient);
+          } catch (err) {
+            clearInterval(interval);
+            console.error('❌ خطأ في إنشاء Supabase:', err);
+            reject(err);
           }
-          return;
+        } else if (attempts >= maxAttempts) {
+          clearInterval(interval);
+          const err = new Error('فشل تحميل مكتبة Supabase بعد 5 ثوانٍ. تحقق من الإنترنت أو أعد تحميل الصفحة.');
+          console.error('❌', err.message);
+          alert(err.message);
+          reject(err);
         }
-
-        console.log('✅ الإدراج ناجح! (حذف السجل التجريبي الآن)');
-        await supabase.from('publishing_schedule').delete().eq('type', 'test');
-        alert('✅ كل شيء يعمل! الاتصال، الجدول، والحفظ جاهزين.\n\nالآن جرب حفظ الجدول الرئيسي.');
-      } catch (err) {
-        console.error('❌ فشل الاختبار الكامل:', err);
-        alert('❌ فشل الاختبار: ' + err.message + '\n\nتحقق من Console للتفاصيل، واتبع الخطوات في Supabase.');
-      }
+      }, 100);  // تحقق كل 100ms
     });
   }
 
-  // الدوال الرئيسية (تستخدم waitForSupabase للانتظار)
-  async function showTable(type) {
-    waitForSupabase(() => {
+  // دالة مساعدة للانتظار حتى إنشاء العميل
+  function waitForClient(callback) {
+    if (supabaseClient) {
+      callback(supabaseClient);
+    } else {
+      initializeSupabase().then(client => {
+        supabaseClient = client;
+        callback(client);
+      }).catch(err => {
+        console.error('❌ فشل الانتظار للعميل:', err);
+        alert('خطأ في إعداد Supabase: ' + err.message);
+      });
+    }
+  }
+
+  // اختبار الاتصال (يُشغّل بعد الإنشاء)
+  async function testSupabaseConnection(client) {
+    console.log('🔍 بدء اختبار الاتصال...');
+    try {
+      // اختبار 1: الاتصال الأساسي
+      const { data: pingData, error: pingError } = await client
+        .from('pg_catalog')
+        .select('version()')
+        .limit(1);
+      if (pingError) throw new Error('فشل الاتصال: ' + pingError.message);
+
+      console.log('✅ الاتصال الأساسي ناجح!');
+
+      // اختبار 2: الجدول
+      const { count: tableCount, error: tableError } = await client
+        .from('publishing_schedule')
+        .select('*', { count: 'exact', head: true });
+
+      if (tableError && tableError.code === '42P01') {
+        console.error('❌ الجدول غير موجود!');
+        alert('❌ الجدول غير موجود! اذهب إلى Supabase > SQL Editor وأنشئه:\n\nCREATE TABLE IF NOT EXISTS publishing_schedule (\n  id UUID DEFAULT gen_random_uuid() PRIMARY KEY,\n  type TEXT NOT NULL,\n  row_index INTEGER NOT NULL,\n  column_index INTEGER NOT NULL,\n  value TEXT,\n  checked BOOLEAN\n);');
+        return;
+      } else if (tableError) {
+        throw new Error('خطأ في الجدول: ' + tableError.message);
+      }
+
+      console.log('✅ الجدول موجود! عدد السجلات: ' + (tableCount || 0));
+
+      // اختبار 3: إدراج
+      const { error: insertError } = await client
+        .from('publishing_schedule')
+        .insert([{ type: 'test', row_index: 0, column_index: 0, value: 'test' }]);
+
+      if (insertError) {
+        console.error('❌ خطأ في الإدراج:', insertError);
+        if (insertError.message.includes('permission')) {
+          alert('❌ مشكلة صلاحيات! في Supabase > Table Editor > publishing_schedule > Configuration، عطّل RLS (Enable RLS: off) أو أضف Policies.');
+        } else {
+          alert('❌ خطأ في الحفظ: ' + insertError.message);
+        }
+        return;
+      }
+
+      // حذف التجريبي
+      await client.from('publishing_schedule').delete().eq('type', 'test');
+      console.log('✅ الاختبار ناجح! كل شيء جاهز.');
+      alert('✅ Supabase يعمل بشكل كامل! الآن جرب حفظ الجدول.');
+    } catch (err) {
+      console.error('❌ فشل الاختبار:', err);
+      alert('❌ فشل الاختبار: ' + err.message + '\n\nتحقق من Console وSupabase Dashboard.');
+    }
+  }
+
+  // الدوال الرئيسية
+  function showTable(type) {
+    waitForClient(async (client) => {
       const tableContainer = document.getElementById('table-container');
       tableContainer.style.display = 'block';
       tableContainer.innerHTML = '';
@@ -303,12 +314,12 @@
       const saveBtn = document.createElement('button');
       saveBtn.textContent = 'حفظ الجدول';
       saveBtn.className = 'blue-btn';
-      saveBtn.onclick = () => saveTableData(type, table);
+      saveBtn.onclick = () => saveTableData(type, table, client);
 
       const deleteBtn = document.createElement('button');
       deleteBtn.textContent = 'حذف الجدول';
       deleteBtn.classList.add('delete-button');
-      deleteBtn.onclick = () => deleteTableData(type, table);
+      deleteBtn.onclick = () => deleteTableData(type, table, client);
 
       actionDiv.appendChild(saveBtn);
       actionDiv.appendChild(deleteBtn);
@@ -316,95 +327,123 @@
       tableContainer.appendChild(actionDiv);
 
       // تحميل البيانات
-      loadSavedData(type, table);
+      loadSavedData(type, table, client);
     });
   }
 
-  async function saveTableData(type, table) {
-    waitForSupabase(async () => {
-      try {
-        console.log('💾 بدء حفظ الجدول...');
-        // الخطوة 1: حذف البيانات القديمة
-        const { error: deleteError } = await supabase
-          .from('publishing_schedule')
-          .delete()
-          .eq('type', type);
+  async function saveTableData(type, table, client) {
+    try {
+      console.log('💾 بدء الحفظ...');
+      // حذف القديم
+      const { error: deleteError } = await client
+        .from('publishing_schedule')
+        .delete()
+        .eq('type', type);
 
-        if (deleteError) {
-          console.error('خطأ في الحذف:', deleteError);
-          throw new Error('حدث خطأ أثناء حذف البيانات القديمة: ' + deleteError.message);
-        }
+      if (deleteError) throw new Error('خطأ في الحذف: ' + deleteError.message);
 
-        // الخطوة 2: جمع البيانات
-        const rows = Array.from(table.querySelectorAll('tbody tr'));
-        const data = [];
+      // جمع البيانات
+      const rows = Array.from(table.querySelectorAll('tbody tr'));
+      const data = [];
 
-        rows.forEach((row, rowIndex) => {
-          Array.from(row.cells).forEach((cell, colIndex) => {
-            const input = cell.querySelector('input');
-            if (!input) return;
-
-            data.push({
-              type,
-              row_index: rowIndex,
-              column_index: colIndex,
-              value: input.type === 'checkbox' ? null : input.value || '',
-              checked: input.type === 'checkbox' ? input.checked : null
-            });
-          });
-        });
-
-        console.log('📊 تم جمع ' + data.length + ' سجل للحفظ.');
-
-        // الخطوة 3: إدراج البيانات
-        const { error: insertError } = await supabase.from('publishing_schedule').insert(data);
-
-        if (insertError) {
-          console.error('خطأ في الإدراج:', insertError);
-          throw new Error('حدث خطأ أثناء الحفظ: ' + insertError.message);
-        } else {
-          console.log('✅ تم الحفظ بنجاح!');
-          alert('تم حفظ الجدول بنجاح!');
-          loadSavedData(type, table);  // إعادة تحميل
-        }
-      } catch (err) {
-        console.error('خطأ عام في الحفظ:', err);
-        alert('حدث خطأ أثناء الحفظ: ' + err.message + '\n\nتحقق من Console للتفاصيل.');
-      }
-    });
-  }
-
-  async function loadSavedData(type, table) {
-    waitForSupabase(async () => {
-      try {
-        const { data, error } = await supabase
-          .from('publishing_schedule')
-          .select('*')
-          .eq('type', type)
-          .order('row_index')
-          .order('column_index');
-
-        if (error) {
-          console.error('خطأ في التحميل:', error);
-          return;
-        }
-
-        const rows = table.querySelectorAll('tbody tr');
-        data.forEach(entry => {
-          const row = rows[entry.row_index];
-          if (!row) return;
-          const cell = row.cells[entry.column_index];
-          if (!cell) return;
+      rows.forEach((row, rowIndex) => {
+        Array.from(row.cells).forEach((cell, colIndex) => {
           const input = cell.querySelector('input');
           if (!input) return;
 
-          if (input.type === 'checkbox') {
-            input.checked = entry.checked || false;
-          } else {
-            input.value = entry.value || '';
-          }
+          data.push({
+            type,
+            row_index: rowIndex,
+            column_index: colIndex,
+            value: input.type === 'checkbox' ? null : input.value || '',
+            checked: input.type === 'checkbox' ? input.checked : null
+          });
         });
+      });
 
-        console.log('📥 تم تحميل ' + data.length + ' سجل.');
-      } catch (err) {
-        console
+      console.log('📊 حفظ ' + data.length + ' سجل...');
+
+      // إدراج الجديد
+      const { error: insertError } = await client.from('publishing_schedule').insert(data);
+
+      if (insertError) throw new Error('خطأ في الإدراج: ' + insertError.message);
+
+      console.log('✅ حفظ ناجح!');
+      alert('تم حفظ الجدول بنجاح!');
+      loadSavedData(type, table, client);
+    } catch (err) {
+      console.error('❌ خطأ في الحفظ:', err);
+      alert('خطأ في الحفظ: ' + err.message + '\n\nتحقق من Console.');
+    }
+  }
+
+  async function loadSavedData(type, table, client) {
+    try {
+      const { data, error } = await client
+        .from('publishing_schedule')
+        .select('*')
+        .eq('type', type)
+        .order('row_index')
+        .order('column_index');
+
+      if (error) {
+        console.error('خطأ في التحميل:', error);
+        return;
+      }
+
+      const rows = table.querySelectorAll('tbody tr');
+      data.forEach(entry => {
+        const row = rows[entry.row_index];
+        if (!row) return;
+        const cell = row.cells[entry.column_index];
+        if (!cell) return;
+        const input = cell.querySelector('input');
+        if (!input) return;
+
+        if (input.type === 'checkbox') {
+          input.checked = entry.checked || false;
+        } else {
+          input.value = entry.value || '';
+        }
+      });
+
+      console.log('📥 تحميل ' + data.length + ' سجل.');
+    } catch (err) {
+      console.error('خطأ في loadSavedData:', err);
+    }
+  }
+
+  async function deleteTableData(type, table, client) {
+    const confirmed = confirm('هل أنت متأكد؟');
+    if (!confirmed) return;
+
+    try {
+      const { error } = await client
+        .from('publishing_schedule')
+        .delete()
+        .eq('type', type);
+
+      if (error) throw new Error('خطأ في الحذف: ' + error.message);
+
+      // مسح محلي
+      const inputs = table.querySelectorAll('input');
+      inputs.forEach(input => {
+        if (input.type === 'checkbox') input.checked = false;
+        else input.value = '';
+      });
+
+      console.log('🗑️ حذف ناجح!');
+      alert('تم الحذف بنجاح!');
+    } catch (err) {
+      console.error('❌ خطأ في الحذف:', err);
+      alert('خطأ في الحذف: ' + err.message);
+    }
+  }
+
+  // بدء التشغيل عند تحميل الصفحة
+  document.addEventListener('DOMContentLoaded', () => {
+    waitForClient(testSupabaseConnection);
+  });
+</script>
+</body>
+</html>
