--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       font-family: 'Arial', sans-serif;
       background-color: #f9f9f9;
       padding: 50px 20px;
-      margin: 0;
+      margin: bottom;
       text-align: center;
     }
 
