--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       background-color: #f9f9f9;
       padding: 50px 20px;
       margin: bottom;
+      margin-top: 50px;
       text-align: center;
     }
 
