--- a/index.html
+++ b/index.html
@@ -132,12 +132,17 @@
       table {
         font-size: 14px;
       }
+      .logo {
+        padding: 10px 20px;
+        width: 50%;
+      }
     }
   </style>
 </head>
 <body>
-
+  <div class="logo">
   <img src="لوجو الشيخ.png">
+  </div>
 
 <h1>اختر الجدول الذي تريده</h1>
 
