--- a/index.html
+++ b/index.html
@@ -140,9 +140,7 @@
   </style>
 </head>
 <body>
-  <div class="logo">
-  <img src="لوجو الشيخ.png">
-  </div>
+  <img src="لوجو الشيخ.png" class="logo">
 
 <h1>اختر الجدول الذي تريده</h1>
 
