--- a/index.html
+++ b/index.html
@@ -136,12 +136,17 @@
         padding: 10px 20px;
         width: 50%;
       }
+      #logo {
+        padding: 10px 20px;
+        width: 50%;
+      }
     }
   </style>
 </head>
 <body>
+  <div id="logo">
   <img src="لوجو الشيخ.png" class="logo">
-
+  </div>
 <h1>اختر الجدول الذي تريده</h1>
 
 <div class="button-container">
