--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </head>
 <body>
   <div id="logo">
-  <img src="لوجو الشيخ.png" class="logo">
+  <img src="لوجو الشيخ.png" width: 15%;>
   </div>
 <h1>اختر الجدول الذي تريده</h1>
 
