--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </head>
 <body>
   <div id="logo">
-  <img src="لوجو الشيخ.png" hight="50px" width="75px">
+  <img src="لوجو الشيخ.png" hight="50px" width="75px" margin-right="15px">
   </div>
 <h1>اختر الجدول الذي تريده</h1>
 
