--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
 
     input[type="text"], input[type="date"] {
       width: 100%;
-      padding: 20px;
+      padding: 10px;
       box-sizing: border-box;
       font-size: 16px;
       border-radius: 4px;
       border: 1px solid #ccc;
+      hight: 50%;
     }
 
     input[type="checkbox"] {
