--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
         padding: 4px 8px;
         width: 15%;
       }
+      .title-field {
+  width: 300px !important;
+  min-width: 260px;
+}
+
     }
   </style>
 </head>
