--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       width: 100%;
       max-width: 1200px;
       margin: 0 auto;
-      background-color: #fff;
+      background-color: #00bd23;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
 
