--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f9f9f9;
-      padding: 50px 20px;
-      margin-top: 50px;
-      text-align: center;
-    }
+  font-family: 'Arial', sans-serif;
+  background-color: #f9f9f9;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  height: 100vh;
+  overflow: hidden; /* يمنع سكروول الصفحة نفسها */
+}
+
 
     h1 {
       margin-bottom: 30px;
