--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
       .day-field {
         width: 160px !important;
       }
+      html {
+    height: 100%;
+      }
     }
   </style>
 </head>
